image d'acc centrée

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -3,8 +3,8 @@
       background-image: url('../IMG/welcomeIMG.png');  
       background-size: cover;
       background-repeat: no-repeat;
+      background-position: center;
       height: 100vh;
-
       display: flex;
       align-items: center;
       justify-content: center;
@@ -51,10 +51,7 @@
     text-shadow: 2px 3px 1px black;
 }
 
-.formulaire
-{
 
-}
 
 #leProjet{
 
