--- a/CSS/index.css
+++ b/CSS/index.css
@@ -224,7 +224,7 @@ body{
 
 .textCard{
   position: absolute;
-  top: 80%;
+  bottom: 0;
   background-color: rgba(0, 0, 0, 0.315);
   color: white;
   text-align: center;
